<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marvin_ros2_control</name>
  <version>0.0.0</version>
  <description>Marvin ROS2 Control Hardware Interface</description>
  <maintainer email="fiveages@example.com">FiveAges Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>
  <depend>gripper_hardware_common</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>control_msgs</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/marvin_ros2_control.xml"/>
  </export>
</package>
